[tool.poetry]
name = "strava_dashboard"
version = "0.1.0"
description = ""
authors = ["jme-taylor <jamiecharlestaylor94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.9.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
